# InvestTime

./: .gitignore  CMakeLists.txt  README.md  StudyWithMe.pro  main.cpp
.github/workflows/: release.yml
StudyWithMeVS/: README.md  StudyWithMeVS.sln
StudyWithMeVS/StudyWithMe/: StudyWithMe.vcxproj  StudyWithMe.vcxproj.filters
StudyWithMeVS/StudyWithMe/src/: FocusRing.cpp  FocusRing.h  MainWindow.cpp  MainWindow.h  main.cpp
